--- a/airtrip/src/sass/object/component/_form.scss
+++ b/airtrip/src/sass/object/component/_form.scss
@@ -65,3 +65,27 @@
 		cursor: pointer;
 	}
 }
+
+.p-searchbox > dl {
+	& > dt {
+		margin-bottom: 10px;
+	}
+	& > dd {
+		margin-bottom: 25px;
+		&:last-child {
+			margin-bottom: 30px;
+		}
+	}
+}
+
+select {
+	display: flex;
+	align-items: center;
+	width: 100%;
+	height: 45px;
+	padding-left: 16px;
+	box-sizing: border-box;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	font-size: 14px;
+}
